[package]
name = "tansakuu"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
aho-corasick = "1.1.2"
allocator-api2 = "0.2.16"
arc-swap = "1.6.0"
arrow = { version = "50.0.0", features = ["prettyprint"] }
arrow-schema = "50.0.0"
base64 = "0.21.7"
bumpalo = { version = "3.14.0", features = ["allocator-api2"] }
crc32fast = "1.3.2"
downcast-rs = "1.2.0"
half = "2.4.0"
log = "0.4.20"
num = "0.4.1"
once_cell = "1.19.0"
oneshot = "0.1.6"
regex = { version = "1.10.3", features = ["std"] }
rust-stemmers = "1.2.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tantivy-common = "0.6.0"
tantivy-sstable = "0.2.0"
tantivy-tokenizer-api = "0.2.0"
tempfile = "3.9.0"
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["serde-human-readable"] }
uuid = { version = "1.6.1", features = ["v4"] }

[dev-dependencies]
mockall = "0.12.1"
rand = "0.8.5"
